Bug 241598 - Ktorrent Crashes Randomly
Summary: Ktorrent Crashes Randomly
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 241158 254384 255350 255387 255651 256016 257617 258038 259202 262432 262857 264826 265450 266107 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-06-13 02:02 UTC by Saifurrahman Naveed
Modified: 2011-02-12 11:03 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Saifurrahman Naveed 2010-06-13 02:02:54 UTC
Application: ktorrent (3.3.4)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-22-generic i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
I was listening to music and Ktorrent was uploading one torrent. Then everything froze except the mouse. I then tried to click on a Firefox Window from the taskbar and it showed up blank. Then Ktorrent closed and showed the crashed dialog.

The crash can be reproduced every time.

 -- Backtrace:
Application: KTorrent (ktorrent), signal: Bus error
[Current thread is 1 (Thread 0xb770d710 (LWP 6965))]

Thread 4 (Thread 0xb27cdb70 (LWP 7043)):
#0  0x00531422 in __kernel_vsyscall ()
#1  0x035b1b86 in poll () from /lib/tls/i686/cmov/libc.so.6
#2  0x002bf982 in net::DownloadThread::waitForSocketReady (this=0x8157000) at ../../libbtcore/net/downloadthread.cpp:188
#3  0x002bfa4f in net::DownloadThread::update (this=0x8157000) at ../../libbtcore/net/downloadthread.cpp:53
#4  0x002c06b8 in net::NetworkThread::run (this=0x8157000) at ../../libbtcore/net/networkthread.cpp:48
#5  0x03e8432e in QThreadPrivate::start (arg=0x8157000) at thread/qthread_unix.cpp:248
#6  0x001e696e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x035bfa4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0xb6124b70 (LWP 7044)):
#0  0x00531422 in __kernel_vsyscall ()
#1  0x001eb015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x03e85287 in QWaitConditionPrivate::wait (this=0x8157398, mutex=0x815739c, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x8157398, mutex=0x815739c, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x002bf3a9 in net::UploadThread::update (this=0x8157360) at ../../libbtcore/net/uploadthread.cpp:73
#5  0x002c06b8 in net::NetworkThread::run (this=0x8157360) at ../../libbtcore/net/networkthread.cpp:48
#6  0x03e8432e in QThreadPrivate::start (arg=0x8157360) at thread/qthread_unix.cpp:248
#7  0x001e696e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0x035bfa4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xb1300b70 (LWP 7045)):
#0  0x00531422 in __kernel_vsyscall ()
#1  0x001eb015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x03e85287 in QWaitConditionPrivate::wait (this=0xb5806a0c, mutex=0xb5806a08, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0xb5806a0c, mutex=0xb5806a08, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x002c3baa in net::ReverseResolverThread::run (this=0xb5806a00) at ../../libbtcore/net/reverseresolver.cpp:123
#5  0x03e8432e in QThreadPrivate::start (arg=0xb5806a00) at thread/qthread_unix.cpp:248
#6  0x001e696e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x035bfa4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb770d710 (LWP 6965)):
[KCrash Handler]
#6  0x03566fe1 in ?? () from /lib/tls/i686/cmov/libc.so.6
#7  0x00329006 in bt::Chunk::readPiece (this=0x85289c8, off=262144, len=147072425, 
    data=0x8c40f1d "F\246D\310\243`\371\250\263m\215\316N\363\003ko{\211m\342\323\265\310Ct=\243.1\316\331\023\221\251\344x\250H=\240^V\200\063h\330\231\004\061ki\210\221zH2\202K5@kZ\305\330\215~\306\265\372\034 \037\241\376\377Y\"z`l\321v\207\374\062\213\351\201\276N\335l\226<P\350\333\070\322iM7\n\205\305RK\271\262\065\"?k,\362A.\232\326\215\251\232\326\350\037)\360,kd}{\277\022\304\"\300\323[ij\243\335j\235\063\223\316\024\070bh\321\065\016\025\240\332\306\265\321\273\221\023E\303\374{\253\210\002\064Z\302\001\207\030\036\064\326\213\274e\245S\216\026\245OI&q\265\025S\233\332\326\266"...)
    at /usr/include/bits/string3.h:52
#8  0x002dceea in Packet (this=0x8761e18, index=350, begin=262144, len=16384, ch=0x85289c8) at ../../libbtcore/download/packet.cpp:85
#9  0x002d93bf in bt::PacketWriter::sendChunk (this=0x8911b58, index=350, begin=262144, len=16384, ch=0x85289c8) at ../../libbtcore/peer/packetwriter.cpp:195
#10 0x002d7a04 in bt::PeerUploader::update (this=0x8906808, cman=..., opt_unchoked=4294967295) at ../../libbtcore/peer/peeruploader.cpp:83
#11 0x002fbdf8 in bt::Uploader::update (this=0x850fb78, opt_unchoked=4294967295) at ../../libbtcore/torrent/uploader.cpp:48
#12 0x003059c1 in bt::TorrentControl::update (this=0x850eb80) at ../../libbtcore/torrent/torrentcontrol.cpp:160
#13 0x08071a63 in kt::Core::update (this=0x82a1658) at ../../ktorrent/core.cpp:849
#14 0x08077308 in kt::Core::qt_metacall (this=0x82a1658, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xbff5df8c) at ./core.moc:155
#15 0x03f8bc9a in QMetaObject::metacall (object=0x82a1658, cl=2653, idx=21, argv=0xbff5df8c) at kernel/qmetaobject.cpp:237
#16 0x03f9a3d5 in QMetaObject::activate (sender=0x82a166c, m=0x409a5a4, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3293
#17 0x03febaa7 in QTimer::timeout (this=0x82a166c) at .moc/release-shared/moc_qtimer.cpp:134
#18 0x03fa260e in QTimer::timerEvent (this=0x82a166c, e=0xbff5e4c0) at kernel/qtimer.cpp:271
#19 0x03f97254 in QObject::event (this=0x82a166c, e=0x8a1e220) at kernel/qobject.cpp:1212
#20 0x013364dc in QApplicationPrivate::notify_helper (this=0x81795b0, receiver=0x82a166c, e=0xbff5e4c0) at kernel/qapplication.cpp:4300
#21 0x0133d05e in QApplication::notify (this=0xbff5e814, receiver=0x82a166c, e=0xbff5e4c0) at kernel/qapplication.cpp:3704
#22 0x01029f2a in KApplication::notify (this=0xbff5e814, receiver=0x82a166c, event=0xbff5e4c0) at ../../kdeui/kernel/kapplication.cpp:302
#23 0x03f86a3b in QCoreApplication::notifyInternal (this=0xbff5e814, receiver=0x82a166c, event=0xbff5e4c0) at kernel/qcoreapplication.cpp:704
#24 0x03fb5d66 in QCoreApplication::sendEvent (this=0x817e3cc) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#25 QTimerInfoList::activateTimers (this=0x817e3cc) at kernel/qeventdispatcher_unix.cpp:603
#26 0x03fb2917 in timerSourceDispatch (source=0x817e800) at kernel/qeventdispatcher_glib.cpp:184
#27 idleTimerSourceDispatch (source=0x817e800) at kernel/qeventdispatcher_glib.cpp:231
#28 0x072e85e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#29 0x072ec2d8 in ?? () from /lib/libglib-2.0.so.0
#30 0x072ec4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#31 0x03fb25d5 in QEventDispatcherGlib::processEvents (this=0x8155e78, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#32 0x013f6135 in QGuiEventDispatcherGlib::processEvents (this=0x8155e78, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x03f85059 in QEventLoop::processEvents (this=0xbff5e784, flags=) at kernel/qeventloop.cpp:149
#34 0x03f854aa in QEventLoop::exec (this=0xbff5e784, flags=...) at kernel/qeventloop.cpp:201
#35 0x03f8969f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#36 0x01336577 in QApplication::exec () at kernel/qapplication.cpp:3579
#37 0x08067a51 in main (argc=5, argv=0xbff5ebe4) at ../../ktorrent/main.cpp:172

Possible duplicates by query: bug 241158, bug 235873.

Reported using DrKonqi
Comment 1 Joris Guisson 2010-06-13 11:30:41 UTC
Is your hard disk getting full ?
Comment 2 Joris Guisson 2010-06-14 19:53:21 UTC
SVN commit 1137933 by guisson:

Make sure that SIGBUS signals caused by failed mmapped IO are dealt with properly

BUG: 241598


 M  +1 -0      ChangeLog  
 M  +1 -0      src/CMakeLists.txt  
 M  +5 -0      src/diskio/chunk.cpp  
 M  +13 -0     src/diskio/piecedata.cpp  
 M  +12 -2     src/diskio/piecedata.h  
 M  +5 -1      src/download/chunkdownload.cpp  
 M  +1 -1      src/download/downloader.cpp  
 M  +1 -1      src/download/webseed.cpp  
 M  +8 -0      src/torrent/torrentcontrol.cpp  
 M  +1 -0      src/util/CMakeLists.txt  
 A             src/util/signalcatcher.cpp   [License: GPL (v2+)]
 A             src/util/signalcatcher.h   [License: GPL (v2+)]
 M  +5 -1      src/util/tests/CMakeLists.txt  
 A             src/util/tests/signalcatchertest.cpp   [License: GPL (v2+)]
 M  +4 -0      src/version.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1137933
Comment 3 Joris Guisson 2010-06-14 20:12:40 UTC
*** Bug 241158 has been marked as a duplicate of this bug. ***
Comment 4 Joris Guisson 2010-10-16 19:19:06 UTC
*** Bug 254384 has been marked as a duplicate of this bug. ***
Comment 5 Joris Guisson 2010-10-27 17:52:35 UTC
*** Bug 255350 has been marked as a duplicate of this bug. ***
Comment 6 Joris Guisson 2010-10-27 20:07:46 UTC
*** Bug 255387 has been marked as a duplicate of this bug. ***
Comment 7 Joris Guisson 2010-10-30 13:55:46 UTC
*** Bug 255651 has been marked as a duplicate of this bug. ***
Comment 8 Joris Guisson 2010-11-04 18:15:16 UTC
*** Bug 256016 has been marked as a duplicate of this bug. ***
Comment 9 Joris Guisson 2010-11-22 19:05:07 UTC
*** Bug 257617 has been marked as a duplicate of this bug. ***
Comment 10 Joris Guisson 2010-11-28 10:02:27 UTC
*** Bug 258038 has been marked as a duplicate of this bug. ***
Comment 11 Joris Guisson 2010-12-08 18:18:48 UTC
*** Bug 259202 has been marked as a duplicate of this bug. ***
Comment 12 Joris Guisson 2010-12-11 12:44:31 UTC
*** Bug 259202 has been marked as a duplicate of this bug. ***
Comment 13 Joris Guisson 2011-01-07 20:57:44 UTC
*** Bug 262432 has been marked as a duplicate of this bug. ***
Comment 14 Joris Guisson 2011-01-11 17:57:45 UTC
*** Bug 262857 has been marked as a duplicate of this bug. ***
Comment 15 Joris Guisson 2011-01-30 10:14:05 UTC
*** Bug 264826 has been marked as a duplicate of this bug. ***
Comment 16 Joris Guisson 2011-02-04 20:20:39 UTC
*** Bug 265450 has been marked as a duplicate of this bug. ***
Comment 17 Joris Guisson 2011-02-12 11:03:14 UTC
*** Bug 266107 has been marked as a duplicate of this bug. ***