Make sure that SIGBUS signals caused by failed mmapped IO are dealt with properly

BUG: 241598

svn path=/trunk/extragear/network/libktorrent/; revision=1137933